# charmed-openstack-upgrader

./: README.md  mybuild.sh  setup.cfg  setup.py
cou/: __init__.py  __main__.py  cli.py
cou/steps/: __init__.py  analyze.py  backup.py  plan.py
cou/utils/: __init__.py  controller.py  exceptions.py  generic.py  global_options.py  juju.py  model.py  os_versions.py  ro_types.py  upgrade_utils.py
cou/zaza_utils/: generic.py  openstack.py  upgrade_utils.py
snap/: snapcraft.yaml
tests/unit/: test_cli.py
tests/unit/steps/: conftest.py  test_analyze.py  test_steps.py  test_steps_analyze.py  test_steps_backup.py
tests/unit/utils/: test_utils_openstack.py  test_utils_os_versions.py
